ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
spec:
    rules:
      - host: fleetman.com
        http:
          paths:
            - backend:
                serviceName: fleetman-webapp
                servicePort: 80
              path: /
